<resources>
    <string name="app_name">Tasks Manager App</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="please_enter_a_password">Please enter a password</string>
    <string name="preference_file_key">MyPreferences</string>
    <string name="icon">Task</string>
    <string name="app_title">Tasks Manager App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="server_error_message">Error connecting to the server. Please try again</string>
    <string name="logout">Logout</string>
    <string name="options">Options</string>
</resources>
